# ssmi-py

./: LICENSE  Makefile  README.md  setup.cfg  ssmi.1  ssmi.py
