[metadata]
name = ssmi-py
version = 0.1.0
description = A simplified version of the output from the `nvidia-smi` command.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ben Elfner
url = https://github.com/simplified-nvidia-smi/py-ssmi
license = MIT
license_file = LICENSE
classifiers =
	License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Topic :: Utilities

[options]
py_modules = ssmi
python_requires = >=3.3
zip_safe = no

[options.extras_require]
dev = file: requirements_dev.txt

[options.entry_points]
console_scripts =
    ssmi = ssmi:ssmi

